<resources>
    <string name="app_name">portfolio</string>

    <string name="title">My Nanodegree Apps!</string>

    <string name="btn_spotify">SPOTIFY STREAMER</string>
    <string name="btn_scores">SCORES APP</string>
    <string name="btn_library">LIBRARY APP</string>
    <string name="btn_buildItBigger">BUILD IT BIGGER</string>
    <string name="btn_baconReader">BACON READER</string>
    <string name="btn_capstone">CAPSTONE: MY OWN APP</string>

    <string name="action_settings">Settings</string>
</resources>
